# metric-governance-agent

./: AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: metric-governance-check.yml
artifacts/: 06_governance_check.md
core/: certification_rules.json  conflict_taxonomy.json
examples/revenue/: README.md  metric_context.json
examples/revenue/artifacts/: 01_evidence_log.csv  02_metric_family_map.md  03_ambiguity_register.md  04_workshop_pack.md  05_decision_log.md  06_governance_check.md  07_dashboard_change_plan.md
examples/revenue/catalog/: business_metric_catalog.csv  business_metric_dictionary.md
examples/revenue/decisions/: MDR-001-booked-revenue.md  MDR-002-gross-revenue.md  MDR-003-net-revenue.md  MDR-004-pipeline-value.md  MDR-005-recognised-revenue.md
examples/revenue/evidence/: board_pack.md  finance_export.csv  marketing_pipeline.sql  sales_dashboard.sql
examples/revenue/feedback/: workshop_decisions.yaml  (+1 more)
metric_packs/: active_customer.json  churn.json  revenue.json
metricgov/: cli.py
skills/: 01_scan_evidence.md  02_map_metric_family.md  03_classify_ambiguity.md  04_generate_alignment_pack.md  05_record_metric_decision.md  06_publish_catalog.md  07_check_governance.md  README.md  ambiguity-classifier.skill.md  dashboard-change-plan-reviewer.skill.md  decision-recorder.skill.md  evidence-scanner.skill.md  governance-check-reviewer.skill.md  metric-governance-agent.skill.md  workshop-pack-generator.skill.md
templates/: business_metric_catalog.csv  metric_decision_record.md
tests/: test_cli_smoke.py
